--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Alpha1
	- Fixed display of disabled localplay methods, Preferences wil
		now only display active ones. 
	- Fixed MPD Controller to attempt to find files based on filename
		if they were added outside of ampache
	- Tweaked Now Playing to prevent wrapping of Album Art.
	- Tweaked stylesheet to fix problem with Firefox and the :active
		style on the sidebar with the select drop downs
	- Added Options to Mail statistics to users when sending them
		a message (Thx pb1dft)

--------------------------------------------------------------------------
  v.3.3.2 10/01/2006
	- Updated SQL file, changed default site title
	- Fixed Duplicate Songs functions that have been broken for a 
		while
	- Fixed some Install issues with incorrectly named templates
	- Added check for MySQL support to first install page, redirects
		to /test.php if mysql support is non-existant
	- Added ability to turn Random/Repeat on and off in localplay
		and also improved localplay page a tiny bit.
	- Fixed a problem with pagination on the admin/users.php page
	- Added ability to turn on User/IP/Date Login history tracking 
		viewable only by Administrators
	- Fixed issue with IE not being able to download files with ? or
		/ or \ in their filenames, replaced with _
	- Added New ACL system which allows user based ACL's  and 
		introduces shared keys for xml-rpc communication and 
		local/remote network definitions for auto-downsampling
	- Introduced new Theming method and 'migrated' all old themes in
		/contrib results may vary. (Thx Ros)
	- Added ability to search by Rating, requires MySQL 4.0 or above
	- Page headers now limited to 30 pages with [....] between top
		and bottom 15.